--- a/PROJE.html
+++ b/PROJE.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-navbar">
                     <div class="header-logo">
-                        <h2 style="color: rgb(237, 216, 235);">YAZILIM DÜNYAM</h2>
+                        <h2 style="color: rgb(237, 216, 235);">YAZILIM DÜNYAM Muhammed</h2>
                     </div>
                     <div class="header-menu">
                         <ul id="menuItems">
